fixed script to change less and more on click ... fixed about and about2 id section for toggling collapse

--- a/css/style.css
+++ b/css/style.css
@@ -76,30 +76,23 @@ nav{
 
 /* button collaps*/
 .container-white .buttonCollapse{
-    background: #02B6A6;
+    background-color: #02B6A6;
     }
-    .about_more{
-        color: white;
+.container-white .about_more{
+        color: black;
     }
-    .about_less{
+.container-white .about_less{
         color:#ff7300;
     }
 
 /* button collaps*/
-.container-blue .buttonCollapse{
+.container-blue .buttonCollapse2{
     background: #02B6A6;
     }
-    .about_more{
-        color: white;
-    }
-    .about_less{
-        color:#ff7300;
-    }
 
 
-/* button collaps*/
 
-
+/* footer*/
 .social:hover {
     -webkit-transform: scale(1.1);
     -moz-transform: scale(1.1);
